--- a/Config/menuSettings.json
+++ b/Config/menuSettings.json
@@ -2519,7 +2519,7 @@
 				{
 					"carName": "0-231111-232233.json",
 					"driverName": "driver1.json",
-					"opponentCount": 6,
+					"opponentCount": 12,
 					"carGroups":
 					{
 					},
@@ -2530,8 +2530,8 @@
 					"raceLength": -1,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "misano",
-					"skillMultiplier": 95,
+					"trackName": "zandvoort",
+					"skillMultiplier": 90,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2554,7 +2554,7 @@
 				{
 					"carName": "0-231111-232233.json",
 					"driverName": "driver1.json",
-					"opponentCount": 6,
+					"opponentCount": 12,
 					"carGroups":
 					{
 					},
@@ -2565,8 +2565,8 @@
 					"raceLength": -1,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "laguna_seca",
-					"skillMultiplier": 95,
+					"trackName": "zandvoort",
+					"skillMultiplier": 90,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2589,7 +2589,7 @@
 				{
 					"carName": "F_6_1",
 					"driverName": "Pierburg_V",
-					"opponentCount": 6,
+					"opponentCount": 12,
 					"carGroups":
 					{
 					},
@@ -2600,8 +2600,8 @@
 					"raceLength": 600,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "laguna_seca",
-					"skillMultiplier": 95,
+					"trackName": "zandvoort",
+					"skillMultiplier": 90,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2637,14 +2637,14 @@
 						"GT4_2019": 0
 					},
 					"raceEventType": "Free",
-					"timeOfDay": 23,
+					"timeOfDay": 16,
 					"practiceLength": 600,
 					"qualifyLength": 0,
 					"raceLength": 1200,
 					"positionOnGrid": 2,
 					"timeMultiplier": 1,
-					"trackName": "suzuka",
-					"skillMultiplier": 89,
+					"trackName": "zandvoort",
+					"skillMultiplier": 91,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2667,7 +2667,7 @@
 				{
 					"carName": "F_6_1",
 					"driverName": "Pierburg_V",
-					"opponentCount": 6,
+					"opponentCount": 12,
 					"carGroups":
 					{
 					},
@@ -2678,8 +2678,8 @@
 					"raceLength": 300,
 					"positionOnGrid": 5,
 					"timeMultiplier": 1,
-					"trackName": "misano",
-					"skillMultiplier": 95,
+					"trackName": "zandvoort",
+					"skillMultiplier": 90,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2702,7 +2702,7 @@
 				{
 					"carName": "F_6_1",
 					"driverName": "Pierburg_V",
-					"opponentCount": 6,
+					"opponentCount": 12,
 					"carGroups":
 					{
 					},
@@ -2713,8 +2713,8 @@
 					"raceLength": 600,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "laguna_seca",
-					"skillMultiplier": 95,
+					"trackName": "zandvoort",
+					"skillMultiplier": 90,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -3132,10 +3132,10 @@
 		"BP_2019": "monza",
 		"BP_2018": "zolder",
 		"BP_2022": "imola",
-		"Free": "suzuka"
+		"Free": "zandvoort"
 	},
 	"globalOpponentCount": 12,
-	"globalOpponentSkill": 89,
+	"globalOpponentSkill": 91,
 	"globalOpponentAggro": 100,
 	"globalPositionOnGrid": 2,
 	"globalCarGroupRatios":
@@ -3209,19 +3209,19 @@
 			"x": 7680,
 			"y": 1440
 		},
-		"useFullscreen": false,
+		"useFullscreen": true,
 		"useTripleScreen": true,
 		"hmdWorldToMeters": 100,
 		"useHDROutput": false,
 		"fpsCapUI": true,
-		"mirrorFramerateCap": 1,
+		"mirrorFramerateCap": 60,
 		"mirrorQualityLevel": 3,
 		"maxCarsVisible": 0,
 		"isMBlurEnabled": 0,
 		"motionBlurLevel": 1,
 		"isAATemporal": true,
 		"aACustom": 0,
-		"colorSaturation": 1,
+		"colorSaturation": 0.79999995231628418,
 		"sharpen": 0.79999995231628418,
 		"pixelDensity": 1,
 		"hDROverride": 0,
@@ -3231,16 +3231,16 @@
 		"hDRUILevel": 1,
 		"hDRImageContrastOffset": 0.20000000298023224,
 		"hDRExposureGainOffset": 0.34999999403953552,
-		"mirrorDistance": 12000,
-		"advancedSharpenFilter": true,
+		"mirrorDistance": 25000,
+		"advancedSharpenFilter": false,
 		"materialsQuality": 1,
 		"temporalUpsampling": true,
-		"volumetricFog": 1,
+		"volumetricFog": 3,
 		"bloomLevel": 0.30000001192092896,
-		"bloomQuality": 5,
-		"mirrorsResolution": 1,
+		"bloomQuality": 4,
+		"mirrorsResolution": 2,
 		"cameraDirtLevel": 3,
-		"foliageLodQuality": 3,
+		"foliageLodQuality": 2,
 		"whiteBalance": 9300,
 		"carLODSet": 90,
 		"hLODEnabled": true,
@@ -3251,10 +3251,10 @@
 		"useTripleViewRect": true,
 		"useLegacyTonemapper": false,
 		"shadowDistanceQuality": 3,
-		"contactShadows": false,
+		"contactShadows": true,
 		"dLSSEnable": true,
-		"dLSSQuality": 1,
-		"dLSSSharpness": 0,
+		"dLSSQuality": -1,
+		"dLSSSharpness": 0.62000000476837158,
 		"dLSSAutoExposure": true,
 		"tAAGen5": false,
 		"aMDFSREnable": false,
@@ -3268,34 +3268,34 @@
 	"customGraphicOptions":
 	{
 		"resolutionQuality": 100,
-		"viewDistanceQuality": 3,
+		"viewDistanceQuality": 2,
 		"antiAliasingQuality": 3,
 		"shadowQuality": 3,
-		"postProcessQuality": 3,
+		"postProcessQuality": 2,
 		"textureQuality": 3,
 		"effectsQuality": 3,
-		"foliageQuality": 3,
+		"foliageQuality": 2,
 		"mirrorQualityLevel": 3,
-		"mirrorFramerateCap": 1,
+		"mirrorFramerateCap": 60,
 		"maxCarsVisible": 0,
 		"isAATemporal": true,
 		"aACustom": 0,
 		"pixelDensity": 1,
-		"mirrorDistance": 12000,
-		"advancedSharpenFilter": true,
+		"mirrorDistance": 25000,
+		"advancedSharpenFilter": false,
 		"materialsQuality": 1,
 		"temporalUpsampling": true,
-		"volumetricFog": 1,
+		"volumetricFog": 3,
 		"bloomLevel": 0.30000001192092896,
-		"bloomQuality": 5,
-		"mirrorsResolution": 1,
-		"foliageLodQuality": 3,
+		"bloomQuality": 4,
+		"mirrorsResolution": 2,
+		"foliageLodQuality": 2,
 		"carLODSet": 90,
 		"hLODEnabled": true,
 		"shadowDistanceQuality": 3,
 		"frameLimit": 0,
 		"isMBlurEnabled": 0,
-		"colorSaturation": 1,
+		"colorSaturation": 0.79999995231628418,
 		"sharpen": 0.79999995231628418,
 		"cameraDirtLevel": 3,
 		"whiteBalance": 9300,
@@ -3306,10 +3306,10 @@
 		"useLegacyTonemapper": false,
 		"hDRColorGamut": 2,
 		"hDRUILevel": 1,
-		"contactShadows": 0,
+		"contactShadows": 1,
 		"dLSSEnable": true,
-		"dLSSQuality": 1,
-		"dLSSSharpness": 0,
+		"dLSSQuality": -1,
+		"dLSSSharpness": 0.62000000476837158,
 		"tAAGen5": false,
 		"aMDFSREnable": false,
 		"aMDFSRQuality": 2,
