--- a/Config/menuSettings.json
+++ b/Config/menuSettings.json
@@ -9,7 +9,7 @@
 		"BGT_2019": "Practice",
 		"BP_2020": "Practice",
 		"BP_2021": "Practice",
-		"Free": "Practice",
+		"Free": "Hotlap",
 		"BP_2022": "Practice"
 	},
 	"seasonRaceEventData":
@@ -2554,12 +2554,12 @@
 				{
 					"carName": "0-231111-232233.json",
 					"driverName": "driver1.json",
-					"opponentCount": 10,
+					"opponentCount": 3,
 					"carGroups":
 					{
 					},
 					"raceEventType": "Free",
-					"timeOfDay": 16,
+					"timeOfDay": 11,
 					"practiceLength": 0,
 					"qualifyLength": 0,
 					"raceLength": -1,
@@ -2702,7 +2702,7 @@
 				{
 					"carName": "F_6_1",
 					"driverName": "Pierburg_V",
-					"opponentCount": 10,
+					"opponentCount": 3,
 					"carGroups":
 					{
 					},
@@ -3208,8 +3208,8 @@
 		"lastLoadedPresetName": "",
 		"resolution":
 		{
-			"x": 3840,
-			"y": 2160
+			"x": 7680,
+			"y": 1440
 		},
 		"useFullscreen": true,
 		"useTripleScreen": true,
@@ -3270,13 +3270,13 @@
 	"customGraphicOptions":
 	{
 		"resolutionQuality": 100,
-		"viewDistanceQuality": 2,
+		"viewDistanceQuality": 3,
 		"antiAliasingQuality": 3,
 		"shadowQuality": 3,
-		"postProcessQuality": 2,
+		"postProcessQuality": 3,
 		"textureQuality": 3,
 		"effectsQuality": 3,
-		"foliageQuality": 2,
+		"foliageQuality": 3,
 		"mirrorQualityLevel": 3,
 		"mirrorFramerateCap": 60,
 		"maxCarsVisible": 0,
