--- a/Config/cameraSettings.json
+++ b/Config/cameraSettings.json
@@ -359,7 +359,7 @@
 				},
 				{
 					"x": 10.100002288818359,
-					"y": -9.0897083282470703e-07,
+					"y": 0.29999908804893494,
 					"z": -2.2000007629394531
 				},
 				{
@@ -859,6 +859,141 @@
 				},
 				{
 					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				}
+			],
+			"pitches": [ 0, 0, 0, 0, 0, 0, 0 ]
+		},
+		"porsche_992_gt3_r":
+		{
+			"cockpitVisMode": 0,
+			"dashInHud": false,
+			"dashInHudWidthLimit": true,
+			"dashOpacity": 1,
+			"offsets": [
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				}
+			],
+			"pitches": [ 0, 0, 0, 0, 0, 0, 0 ]
+		},
+		"lamborghini_huracan_gt3_evo2":
+		{
+			"cockpitVisMode": 0,
+			"dashInHud": false,
+			"dashInHudWidthLimit": true,
+			"dashOpacity": 1,
+			"offsets": [
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 1,
+					"y": 0,
+					"z": 3
+				},
+				{
+					"x": 1,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 1,
+					"y": 0,
+					"z": 3
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				}
+			],
+			"pitches": [ 0, 0, 0, 0, 0, 0, 0 ]
+		},
+		"ferrari_488_gt3_evo":
+		{
+			"cockpitVisMode": 0,
+			"dashInHud": false,
+			"dashInHudWidthLimit": true,
+			"dashOpacity": 1,
+			"offsets": [
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 0,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": -26,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 9,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 4,
+					"y": 0,
+					"z": 0
+				},
+				{
+					"x": 9,
 					"y": 0,
 					"z": 0
 				},
