--- a/Config/menuSettings.json
+++ b/Config/menuSettings.json
@@ -9,7 +9,7 @@
 		"BGT_2019": "Practice",
 		"BP_2020": "Practice",
 		"BP_2021": "Practice",
-		"Free": "Practice",
+		"Free": "Hotlap",
 		"BP_2022": "Practice"
 	},
 	"seasonRaceEventData":
@@ -2565,8 +2565,8 @@
 					"raceLength": -1,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "kyalami",
-					"skillMultiplier": 92,
+					"trackName": "laguna_seca",
+					"skillMultiplier": 93,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2600,8 +2600,8 @@
 					"raceLength": 600,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "kyalami",
-					"skillMultiplier": 92,
+					"trackName": "laguna_seca",
+					"skillMultiplier": 93,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2643,8 +2643,8 @@
 					"raceLength": 600,
 					"positionOnGrid": 15,
 					"timeMultiplier": 1,
-					"trackName": "kyalami",
-					"skillMultiplier": 92,
+					"trackName": "laguna_seca",
+					"skillMultiplier": 93,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -2713,8 +2713,8 @@
 					"raceLength": 600,
 					"positionOnGrid": 1,
 					"timeMultiplier": 1,
-					"trackName": "kyalami",
-					"skillMultiplier": 92,
+					"trackName": "laguna_seca",
+					"skillMultiplier": 93,
 					"aggroMultiplier": 100,
 					"p1_TimeOfDay": 14,
 					"p2_Enabled": false,
@@ -3135,7 +3135,7 @@
 		"Free": "laguna_seca"
 	},
 	"globalOpponentCount": 15,
-	"globalOpponentSkill": 92,
+	"globalOpponentSkill": 93,
 	"globalOpponentAggro": 100,
 	"globalPositionOnGrid": 15,
 	"globalCarGroupRatios":
@@ -3163,12 +3163,12 @@
 		"damage": 0.10999999940395355,
 		"comms": 0,
 		"startingComms": 1,
-		"spotter": true,
+		"spotter": false,
 		"music": 0,
 		"opponent": 0.84999996423721313,
-		"gui": 1,
+		"gui": 0.44999998807907104,
 		"video": 1,
-		"bodywork": 0,
+		"bodywork": 0.079999998211860657,
 		"driverAudio":
 		{
 			"index": 0,
