--- a/Config/ffbUserSettings.json
+++ b/Config/ffbUserSettings.json
@@ -18,6 +18,7 @@
 		"mclaren_570s_gt4": 1,
 		"bmw_m2_cs_racing": 1,
 		"lamborghini_huracan_gt3_evo2": 1,
-		"ferrari_296_gt3": 1
+		"ferrari_296_gt3": 1,
+		"porsche_992_gt3_cup": 1
 	}
 }
